<resources>
    <string name="mezzofanti_appName">Mezzofanti</string>
    <string name="mezzofanti_ocrResult">Your ocr result here</string>
  	<string name="mezzofanti_msg_default_status">Press camera button to start OCR.</string>
  	<string name="mezzofanti_status_text">Your status here</string>
	<string name="mezzofanti_ocr_processing_title">Text-recognition in progress:</string>
	<string name="mezzofanti_ocr_processing_body_begin">using the</string>
	<string name="mezzofanti_ocr_processing_body_end">dictionary.</string>
	<string name="mezzofanti_status_bar_vertical">Vertical </string>
	<string name="mezzofanti_status_bar_horizontal">Horizontal </string>
	<string name="mezzofanti_status_bar_updown">up/down</string>
	<string name="mezzofanti_status_bar_ocr_dict">OCR dictionary:</string>
	<string name="mezzofanti_status_bar_orientation">orientation:</string>
    <string name="mezzofanti_nolanginstalled_title">Warning</string>
    <string name="mezzofanti_nolanginstalled_body">No languages installed, please install using "menu->preferences->download languages"</string>
    <string name="mezzofanti_nolanginstalled_ok">OK</string>
    <string name="resultsactivity_add_word_to_dictionary_yes">Yes</string>
    <string name="resultsactivity_add_word_to_dictionary_no">No</string>
	<string name="resultsactivity_addword2dict_title">Add word to dictionary</string>
	<string name="resultsactivity_addword2dict_message1">Do you want to add the word</string>
	<string name="resultsactivity_addword2dict_message2">to the</string>
	<string name="resultsactivity_addword2dict_message3">dictionary?</string>
    <string name="resultsactivity_selected_word">Selected word: </string>
    <string name="resultsactivity_ocr_trust">OCR trust: </string>
    <string name="resultsactivity_ocr_valid_word">Valid</string>
    <string name="resultsactivity_ocr_valid_word2">word:</string>
    <string name="resultsactivity_resultsmode_selected_text">Selected text: </string>
    <string name="resultsactivity_resultsmode_selected_word_none">Selected word: none</string>
    <string name="resultsactivity_resultsmode_selected_all_text">All text: translate/email/sms.</string>
    <string name="resultsactivity_resultsmode_mean_confidence">Mean OCR confidence is</string>
    <string name="resultsactivity_resultsmode_selected_single_word">Single-word: translate/google/dictionary/wiki.</string>
    <string name="resultsactivity_resultsmode_selected_multiple_words">Multiple-words: translate/google/dictionary/wiki.</string>
    <string name="resultsactivity_resultsmode_edit_mode_back">To end Edit mode, press Back.</string>
	<string name="resultsactivity_ocrbadresults_title">Warning: </string>
	<string name="resultsactivity_ocrbadresults_msg1">The OCR confidence is</string>
	<string name="resultsactivity_ocrbadresults_msg2">(max=100) \n\n
This may happen for one of the following reasons: \n
- the OCR was optimized for speed, thus the quality is low (consider changing "Settings->speed vs quality")\n
- the angle of the camera relative to the text was more than the OCR could handle (consider taking the snapshot with the smallest angle to the text as possible)\n
- there was too much light in the picture (consider changing the position of the paper)\n\n</string>
	<string name="resultsactivity_ocrbadresults_ok">OK</string>
    <string name="mezzofanti_capturemode_statustext_switchtosmall">switch to small capture mode</string>
    <string name="mezzofanti_capturemode_statustext_switchtolarge">switch to large capture mode</string>
    <string name="mezzofanti_capturemode_statustext_switchtolarge2">delete-last / go-to-results</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About us</string>
    <string name="menu_feedback">Feedback</string>
    <string name="preferences_helpTitle">Help</string>
    <string name="preferences_msg_help_step1">Welcome to Mezzofanti - Augmented reality through text-recognition.\n
    The application at a glance:\n
1. Select a text of interest (ex: menu at a restaurant, tourist information sign, etc), and take a photo. The internal-OCR engine will start Text Recognition.\n 
2. Use Mezzofanti to translate the text (or parts of it) to any one of over forty languages, or to google it on the web or on Wikipedia.\n
    \n
    More insides about step 1 - Grabbing the picture and settings\n\n
    - you can switch between line/full-screen recognition\n
    - take the picture either with the "camera button" or by "long-press" on the screen
    - you can select either horizontal or vertical orientation while taking the picture, when the focus button is pressed you will observe indicators about your orientation\n
    - please make sure the camera focuses: green=focused, red=unfocused
    - the OCR will work best if the text is parallel to one of the margins (note: with a small tolerance of ~15 degree angle)\n
    - once the picture is taken, the OCR will start processing. Depending on the picture quality, and the amount of text, the processing may take roughly between 1-20 seconds.\n
	- to improve the speed of the OCR (in the detriment of the quality) you can use select from options "Settings->Speed/Quality ratio"\n
	- the OCR uses some language-specific files, by default the application has the English language installed, if you want to install another language to use with OCR, please go to "Settings->Download new languages"\n
	- if you are taking pictures with uneven light source, you may consider using the "Settings->Use uneven light filter" (note: this will add to the OCR processing time)\n
	- please select "Settings->Skip intro at startup" to enable/disable the intro message when the application starts\n
	- please select "Settring->Restore factory settings" if you want to switch back to the default settings.\n
	\n
	Enjoy using Mezzofanti! ;)\n
	The Wizard Team.\n
	\n
	PS: Please do not hesitate to write us feedback "Menu->Feedback". We are appreciating your thoughts.\n
    </string>
    <string name="preferences_msg_help_step2">Welcome to Mezzofanti!\n
    More insides about step 2 - Using the results\n\n
    Once the OCR has finished, you will be displayed the OCRed text along with confidence information in the status box.\n 
    First thing you should make sure the text is similar to the original image. Mezzofanti will span the text, using italics where the word has a low confidence or is not a valid dictionary word. Pressing each word you can see more info about it.\n
    If you want to edit/modify the text you may do so using the appropriate "Edit" button. Note: if you are not happy with the OCR results, please take again the picture using increased "Settings->Speed/Quality ratio", also consider either an even light source for the paper surface (consult also the internal OCR image if needed), or use the "Settings->Use uneven light filter".\n
    When you are happy with the text, you can:\n 
    - translate it in one of the 40 available languages\n
    - search parts of the text on Google\n
    - search parts of the text on Wiki\n
    - get information about a word from WikiDictionary\n
    With the options above, you may be interested to use the whole text or just select parts of it, for this use the "Select" button.\n 
    \n
    At any time you can email/sms the text to yourself for later use or a friend.\n
    If you want to restart the whole process with another text, just hit the back button.\n  
	\n
	Enjoy using Mezzofanti! ;)\n
	The Wizard Team.\n
	\n
	PS: Please do not hesitate to write us feedback "Menu->Feedback". We are appreciating your thoughts.\n
    </string>
    <string name="preferences_aboutTitle">About us</string>
    <string name="preferences_msg_about">
    More about the engine:\n
    - the internal text-recognition engine: Tesseract 2.03 - developed by Google and released under the Apache License 2.0\n
    - the translation engine - based on "Google translate" - API developed by Google and released under the Apache License\n
    - all code is source free, released under Apache License 2.0, for more information and the code please visit out website\n
    \n
    More about Mezzofanti:\n 
    Giuseppe Caspar Mezzofanti (19 September 1774 – 15 March 1849) was an Italian cardinal and famed linguist and hyperpolyglot. Born and educated in Bologna, he completed his theological studies before he had reached the minimum age for ordination as a priest; he was ordained in 1797. In the same year, he became professor of Arabic at the University of Bologna. He later lost the position for refusing to take the oath of allegiance required by the Cisalpine Republic, which governed Bologna at the time.\n
    Mezzofanti was well-known for being a hyperpolyglot who fluently spoke thirty-eight languages and forty dialects, despite never traveling outside of Italy. He spoke at least twenty-eight languages perfectly: English, Welsh, Scottish Gaelic, German, Hebrew, Arabic, Aramaic, Coptic, Armenian, Persian, Turkish, Maltese, Ancient Greek, Modern Greek, Latin, Italian, Spanish, Portuguese, French, Swedish, Danish, Dutch, Russian, Polish, Czech, Hungarian, Chinese.\n
	\n    
    More about IT Wizard:\n 
	We started working together as a team in 2002 as preparation for IEEE’s Computer Society International Design Competition. Following our first place in the world finals, we decided to join our expertise in hardware design and software development.The result was a young, tireless and enthusiastic team, Wizard, focused on providing companies with functioning prototypes and production solutions for their ideas. Our past activity involved extensive consulting on and enhancing of specific parts of existing embedded projects, software defined radios, mobile phone development.\n
	Members of Wizard team have been awarded gold medals for participation in past prestigious international competitions, such as the IEEE’s CSIDC and ACM’s ICPC contests. Our skills are reflected in Certificates of Excellence from the Romanian National Association of Software Industry, Romanian Ministry of Youth and Sport, and IEEE. Our results have also been published and presented at international events. Last, but not least, our trainees won top places at prestigious international competitions such as IEEE’s CSIDC and Microsoft’s Windows Embedded Challenge.\n

  	\n
	Enjoy using Mezzofanti! ;)\n
	The Wizard Team.\n
	\n
	PS: Please do not hesitate to write us feedback "Menu->Feedback". We are appreciating your thoughts.\n
    </string>
	<string name="preferences_name">Settings</string>
	<string name="preferences_general_title">General settings</string>
	<string name="preferences_skip_intro_at_startup">Skip intro at start</string>
	<string name="preferences_OCR_title">OCR settings</string>
	<string name="preferences_use_image_ligth_filter">Use uneven light filter</string>
	<string name="preferences_display_debug_image">Display internal OCR image</string>
	<string name="preferences_speed_quality">Speed/Quality ratio</string>
	<string name="preferences_set_OCR_language">Set OCR dictionary language</string>
	<string name="preferences_download_language">Download new languages</string>
	<string name="preferences_min_overall_confidence">Min overall confidence</string>
	<string name="preferences_min_word_confidence">Min word confidence</string>
	<string name="preferences_translate_from_settings">Default translate-from</string>
	<string name="preferences_translate_to_settings">Default translate-in</string>
	<string name="preferences_restore_factory_settings_message">Are you sure?</string>
	<string name="preferences_restore_factory_settings_button_cancel">Cancel</string>
	<string name="preferences_restore_factory_settings_button_ok">OK</string>
	<string name="preferences_restore_factory_settings_title">Restore factory settings</string>
    <string name="preferences_button_cancel">OK</string>
</resources>